--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
       </div>
       <div class="container">
       <div class="row nav-sheet">
-        <div class="col-md-3 nav"><a href="#"><i>-</i><label>SK8T NEWS</label><i>-</i></a></div>
-        <div class="col-md-3 nav"><a href="#"><i>-</i><label>SKATEBOARDERS</label><i>-</i></a></div>
-        <div class="col-md-3 nav"><a href="#"><i>-</i><label>BOARD DESIGN</label><i>-</i></a></div>
-        <div class="col-md-3 nav"><a href="#"><i>-</i><label>CONTACT US</label><i>-</i></a></div>
+        <div class="col-md-3 nav"><div class="deco-lines"></div><a href="#"><label>SK8T NEWS</label></a><div class="deco-lines"></div></div>
+        <div class="col-md-3 nav"><div class="deco-lines"></div><a href="#"><label>SKATEBOARDERS</label></a><div class="deco-lines"></div></div>
+        <div class="col-md-3 nav"><div class="deco-lines"></div><a href="#"><label>BOARD DESIGN</label></a><div class="deco-lines"></div></div>
+        <div class="col-md-3 nav"><div class="deco-lines"></div><a href="#"><label>CONTACT US</label></a><div class="deco-lines"></div></div>
       </div>
-      <div class="image-scroller">
+
+      <div class="image-scroller"></div>
+
+      <div class="button-container">
+      <div class="scroller-button"></div>
+      <div class="scroller-button"></div>
+      <div class="scroller-button"></div>
       </div>
+
       <div class="news-container">
         <div class="col-md-4 news">
           <h2>Tony Hawk foundation raises big money at celeb fundraiser</h2>
@@ -103,19 +110,19 @@
               rutrum lorem at tincidunt.
             </p>
             <div class="col-md-1 icons">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-              <i class="fa fa-rss" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="col-md-6">
             <form>
               <div class="form-group">
-                <input type="name" class="form-control" id="exampleInputName1" placeholder="NAME">
+                <input type="name" class="form-control" id="inputName" placeholder="NAME">
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="EMAIL">
+                <input type="email" class="form-control" id="inputEmail" placeholder="EMAIL">
               </div>
               <textarea class="form-control" rows="3" placeholder="YOUR MESSAGE"></textarea>
               <button type="submit" class="btn btn-default">SUBMIT</button>
